--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
 <body class="font-sans selection:bg-brand-600 selection:text-white overflow-x-hidden flex flex-col min-h-screen">
 
@@ -166,7 +165,7 @@
     <script>
         // --- CONFIGURAÇÃO ---
         // COLOQUE SEU LINK AQUI (Pode ser Google Drive ou Link Direto mp4)
-        const VIDEO_URL = "https://www.w3schools.com/html/mov_bbb.mp4"; 
+        const VIDEO_URL = "https://drive.google.com/file/d/10fdPejLlqK6DFdSJNzW7oUDooY9Gvygr/view?usp=sharing"; 
         
         // Tempo para aparecer o botão (25min 30seg = 1530 segundos)
         const SHOW_CTA_TIME = 1530; 
@@ -287,6 +286,5 @@
         });
 
     </script>
-<script type="module" src="/index.tsx"></script>
 </body>
 </html>
